--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/bryandunkley/lightwave#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "@google-cloud/firestore": "^4.0.0",
     "promise": "^8.1.0"
   },
   "devDependencies": {
