--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,3 +23,6 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - run: bash <(curl -s https://codecov.io/bash) -t token
+    env:
+      CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
