--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "axios-mock-adapter": "^1.18.2",
     "c8": "^v7.3.0",
+    "codecov": "^3.7.2",
     "eslint": "^7.7.0",
     "eslint-config-strongloop": "^2.1.0",
     "mocha": "^7.0.0",
