--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,6 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    - run: npm codecov
+    - run: npm run codecov
     env:
       CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
